[project]
name = "arber"
version = "0.1.0"
description = "Sports betting arbitrage engine"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    "apscheduler>=3.10.4,<4",
    "httpx[http2]>=0.28.1",
    "curl-cffi>=0.7.4",
    "tenacity>=9.0.0",
    "structlog>=24.4.0",
    "pydantic>=2.10.3",
    "pydantic-settings>=2.7.0",
    "rapidfuzz>=3.10.1",
    "typer>=0.15.1",
    "orjson>=3.10.12",
    "uvloop>=0.21.0",
    "prometheus-client>=0.21.1",
    "aiohttp>=3.11.10",
]

[project.scripts]
arber = "arber.cli.main:app"

[dependency-groups]
dev = [
    "ruff>=0.8.4",
    "mypy>=1.13.0",
    "pytest>=8.3.4",
    "pytest-asyncio>=0.25.0",
    "testcontainers[postgresql]>=4.9.0",
    "pre-commit>=4.0.1",
    "psycopg2-binary>=2.9.11",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/arber"]

[tool.ruff]
line-length = 100
target-version = "py313"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "N",   # pep8-naming
    "SIM", # flake8-simplify
    "RUF", # ruff-specific
    "PL",  # pylint
    "TID", # flake8-tidy-imports
    "ASYNC",
]
ignore = [
    "E501",    # line too long (ruff format handles it)
    "PLR0913", # too many arguments
    "PLR2004", # magic value
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["PLR2004", "S101"]
"**/migrations/**" = ["E", "F", "N", "UP"]

[tool.mypy]
python_version = "3.13"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = "apscheduler.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "curl_cffi.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]
